feat: 不要なレスポンスクラスを削除し、注文および商品レスポンスにフィルタリングロジックを追加